--- a/public/config/config.json
+++ b/public/config/config.json
@@ -8,7 +8,7 @@
     "SYMBOL": "ETC",
     "ID": 1 
     },
-  "NFT_NAME": "Classic pharaos",
+  "NFT_NAME": "Classic pharaohs",
   "SYMBOL": "Cp",
   "MAX_SUPPLY": 5000,
   "WEI_COST": 20000000000000,
